-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.1
-
None
-
-
5cf72ee6ab (qt/qtbase/dev) 5cf72ee6ab (qt/tqtc-qtbase/dev) d9c1ab0bf5 (qt/qtbase/6.4)
Cloned QTBUG-105984, since it's closed. Can't find multimedia plugins on Mac. Same symptoms.
- clones
-
QTBUG-105984 windeployqt: Multimedia plugins missing
-
- Closed
-
- is duplicated by
-
QTBUG-107639 windeployqt failed to copy the plugins/multimedia folder to the target folder
-
- Closed
-
-
QTBUG-107551 windeployqt missing file when using multimedia
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108742 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 444758,6 | macdeployqt: Fix QtMultimedia plugins deployment | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 445245,2 | macdeployqt: Fix QtMultimedia plugins deployment | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |